@@ -2,6 +2,6 @@
 ControlPort=6352
 NetworkInterface=eth0
 NtpConfigurationFile=/etc/ntp.conf
-NtpServiceName=ntp
+NtpServiceName=ntpd
 ServiceCommand=/usr/bin/wtd
 ServiceRespawnDelay=100
